fixes issue 638 + re-enable cs2bugMTd test since prior fixes seem to have fixed it and it   could help catch future issues like i#500
SVN-Revision: 622

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -406,8 +406,7 @@ if (NOT TOOL_DR_HEAPSTAT)
       newtest_custbuild(mallocMD malloc.c "/MD" malloc)
 
       # C++ tests with other libc configs
-      # FIXME i#638: C++ /MTd crashes drmem!
-      #newtest_custbuild(cs2bugMTd cs2bug.cpp "/MTd" cs2bug)
+      newtest_custbuild(cs2bugMTd cs2bug.cpp "/MTd" cs2bug)
       newtest_custbuild(cs2bugMD cs2bug.cpp "/MD" cs2bug)
     endif (USE_DRSYMS)
   endif (WIN32)
