--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -400,6 +400,8 @@ if (NOT TOOL_DR_HEAPSTAT)
 
   if (WIN32)
     newtest(wincrt wincrt.cpp)
+    newtest(rtl_memory_zones rtl_memory_zones.c)
+    target_link_libraries(rtl_memory_zones ntdll)
     if (USE_DRSYMS) # cygwin build can't see static malloc routines
       newtest_custbuild(wincrtdbg wincrt.cpp "/MTd" "")
       newtest_custbuild(mallocMTd malloc.c "/MTd" malloc)
