fixes issue 752 Add GDI usage checks beyond init/addr
Added 7 GDI API usage checks:
+ check: proper pairing GetDC|ReleaseDC and CreateDC|DeleteDC
+ check: whether ReleaseDC is called from the same thread that called GetDC
+ check: CreateCompatibleDC is not used after creating thread exits
+ check: whether any non-default objects are selected in a DC being deleted
+ check: do not delete HGDIOBJ that is selected in any DC
+ check: do not operate on a single DC from two different threads
+ check: do not select the same bitmap into two different DC's
Let's open new issues if we want further checks.

They are reported as errors of type WARNING.
Syscall infrastructure calls into new file gdicheck.c.

However, for some objects, SelectObject does all its work in usermode
and does not call the syscall.  It does this for stock objects pre-win7, so
I'm disabling this feature there.  Even on win7, this means we miss some
checks (though no false positives).
i#764 covers adding interception of library routines, via drwrap.

I also:
+ marked HDC-returning syscalls as SYSINFO_RET_ZERO_FAIL
+ added a test of all 7 checks: tests/gdi.cpp
+ added some DC tests to app_suite/ntgdi_tests_win.cpp
+ add docs
+ suppress some GDI errors seen in system libs

SVN-Revision: 717

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 # **********************************************************
-# Copyright (c) 2010-2011 Google, Inc.  All rights reserved.
+# Copyright (c) 2010-2012 Google, Inc.  All rights reserved.
 # Copyright (c) 2009-2010 VMware, Inc.  All rights reserved.
 # **********************************************************
 
@@ -652,6 +652,7 @@ else (TOOL_DR_HEAPSTAT)
   else (UNIX)
     set(srcs ${srcs} drmemory/syscall_windows.c)
     set(srcs ${srcs} drmemory/syscall_wingdi.c)
+    set(srcs ${srcs} drmemory/gdicheck.c)
     if (SYSCALL_DRIVER)
       set(srcs ${srcs} drmemory/syscall_driver.c)
     endif (SYSCALL_DRIVER)
