gdi fixes while waiting for i#764: + only enable -check_gdi on win7sp1 because sp0 has the same behavior as   vista and below where selecting a stock object doesn't invoke a system   call + add support for gdi test via new EMPTY_OK directive + disable gdi option b/c of the bots hitting the pre-sp1 behavior:   something to do w/ no interactive user.   the above work is still worth keeping in case we figure out the   bot behavior before adding library interception.
SVN-Revision: 722

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -429,9 +429,7 @@ if (NOT TOOL_DR_HEAPSTAT)
       newtest_custbuild(cs2bugMD cs2bug.cpp "/MD" cs2bug)
     endif (USE_DRSYMS)
 
-    # FIXME i#764: currently only works on win7sp1 and cmake's built-in
-    # vars won't distinguish sp's for us so disabling
-    #newtest(gdi gdi.cpp)
+    newtest(gdi gdi.cpp)
   endif (WIN32)
 
   # FIXME i#657: realloc is flaky on the Windows bots.
