- Add pattern.c and pattern.h for pattern mode - add instrumentation for pattern mode - add segv fault handling for pattern mode - add illegal instr fault handling for pattern mode
SVN-Revision: 736

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -631,6 +631,7 @@ else (TOOL_DR_HEAPSTAT)
     drmemory/stack.c
     drmemory/shadow.c
     drmemory/options.c
+    drmemory/pattern.c
     common/alloc.c
     common/alloc_unopt.c
     common/heap.c
