fix symquery config errors w/ local DR
SVN-Revision: 752

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -444,12 +444,12 @@ else (USE_DRSYMS)
   endif (X64)
 endif (USE_DRSYMS)
 if (DEBUG_BUILD)
-  set(INSTALL_LIB "${INSTALL_BIN}/debug")
-  set(BUILD_LIB "${BUILD_BIN}/debug")
+  set(build_type "debug")
 else (DEBUG_BUILD)
-  set(INSTALL_LIB "${INSTALL_BIN}/release")
-  set(BUILD_LIB "${BUILD_BIN}/release")
+  set(build_type "release")
 endif (DEBUG_BUILD)
+set(INSTALL_LIB "${INSTALL_BIN}/${build_type}")
+set(BUILD_LIB "${BUILD_BIN}/${build_type}")
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/${BUILD_LIB}")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
@@ -693,11 +693,6 @@ if (WIN32)
     "${CMAKE_C_FLAGS_${CMAKE_BUILD_TYPE_UPPER}}")
   set_source_files_properties(tools/winsyms.c PROPERTIES
     COMPILE_FLAGS "${CMAKE_C_FLAGS_${CMAKE_BUILD_TYPE_UPPER}}")
-
-  # symbol query tool
-  add_executable(symquery tools/symquery.c)
-  configure_DynamoRIO_standalone(symquery)
-  use_DynamoRIO_extension(symquery drsyms)
 endif (WIN32)
 
 ##################################################
@@ -805,6 +800,13 @@ if (TOOL_DR_HEAPSTAT AND BUILD_VISUALIZER)
     VERBATIM)
 endif (TOOL_DR_HEAPSTAT AND BUILD_VISUALIZER)
 
+if (WIN32)
+  # symbol query tool
+  add_executable(symquery tools/symquery.c)
+  configure_DynamoRIO_standalone(symquery)
+  use_DynamoRIO_extension(symquery drsyms)
+endif (WIN32)
+
 # should go into a configure.h if we get enough of these
 set(script_aux "")
 if (PERL_TO_EXE)
@@ -857,9 +859,9 @@ if (WIN32)
       configure_file("${DynamoRIO_DIR}/../bin32/drconfig.exe"
         "${PROJECT_BINARY_DIR}/${BUILD_BIN}/drconfig.exe" COPYONLY)
       # symquery needs dynamorio.dll and drsyms.dll in same dir
-      configure_file("${DynamoRIO_DIR}/../ext/lib32/release/drsyms.dll"
+      configure_file("${DynamoRIO_DIR}/../ext/lib32/${build_type}/drsyms.dll"
         "${PROJECT_BINARY_DIR}/${BUILD_BIN}/drsyms.dll" COPYONLY)
-      configure_file("${DynamoRIO_DIR}/../lib32/release/dynamorio.dll"
+      configure_file("${DynamoRIO_DIR}/../lib32/${build_type}/dynamorio.dll"
         "${PROJECT_BINARY_DIR}/${BUILD_BIN}/dynamorio.dll" COPYONLY)
     endif (USE_DRSYMS)
   else (USER_SPECIFIED_DynamoRIO_DIR)
@@ -889,13 +891,13 @@ if (WIN32)
       add_custom_target(drsymsdll_copy_tgt ALL DEPENDS "${drsymsdll_copy}")
       add_custom_command(OUTPUT "${drsymsdll_copy}" DEPENDS drsyms
         COMMAND ${CMAKE_COMMAND}
-        ARGS -E copy "${DynamoRIO_DIR}/../ext/lib32/release/drsyms.dll"
+        ARGS -E copy "${DynamoRIO_DIR}/../ext/lib32/${build_type}/drsyms.dll"
         "${drsymsdll_copy}" VERBATIM)
-      set(drdll_copy "${PROJECT_BINARY_DIR}/${BUILD_BIN}/drsyms.dll")
+      set(drdll_copy "${PROJECT_BINARY_DIR}/${BUILD_BIN}/dynamorio.dll")
       add_custom_target(drdll_copy_tgt ALL DEPENDS "${drdll_copy}")
       add_custom_command(OUTPUT "${drdll_copy}" DEPENDS dynamorio
         COMMAND ${CMAKE_COMMAND}
-        ARGS -E copy "${DynamoRIO_DIR}/../lib32/release/dynamorio.dll"
+        ARGS -E copy "${DynamoRIO_DIR}/../lib32/${build_type}/dynamorio.dll"
         "${drdll_copy}" VERBATIM)
     endif (USE_DRSYMS)
   endif (USER_SPECIFIED_DynamoRIO_DIR)
