i#777, drmgr cleanup, part 3: bb events + annotate, alloc replace, libc replace, and perturb   all register their own passes instead of being   called from the main instru event + annotate inserts a label so it can delay-add   its clean call + using coordinated priorities to have replace happen before   app2app, and to have clean calls from annotate and perturb   go in after main instru to avoid reachability + using new 4-phase user_data to pass bb_info_t pointer + repstr expansion is the most complicated:   * had to add drutil_expand_rep_string_ex() to get     enough info to act on   * changed expansion to use xl8+1 for the other app     instrs to avoid duplicate hits from other passes   * treating as app instrs simplified special-case code     for spilling and updating ecx, but special-case for     spilling whole-bb early instead of lazily has to     remain (consequence of non-linear block) + drheapstat uses the 4 phases, but for simplicity I   disabled drmem's to reduce #changes here + note that DrMem now uses 2 extra shared libs (drmgr + drutil)   and has a little extra instru on repstr (wasn't instrumenting   jecxz or mov $1->ecx before)
still not done yet for i#777, for a future diff:
+ single liveness analysis reverse scan w/ stored info instead
  of current multiple forward scans
+ drwrap

SVN-Revision: 761

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -751,6 +751,7 @@ configure_DynamoRIO_client(${client_target})
 # i#277/PR 540817: features split into DynamoRIO Extensions
 use_DynamoRIO_extension(${client_target} drcontainers)
 use_DynamoRIO_extension(${client_target} drmgr)
+use_DynamoRIO_extension(${client_target} drutil)
 set_target_properties(${client_target} PROPERTIES
   # dlls are put in runtime dir but we want lib dir
   RUNTIME_OUTPUT_DIRECTORY${location_suffix} "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
