i#777, drmgr cleanup, part 4: drwrap for allocators + replace alloc.c internal wrapping with drwrap + had to add a bunch of new functionality to drwrap   to make this work + was able to change alloc's instrumentation routine to   be alloc.c-internal and registered separately w/ drmgr + need to use i#685 DRWRAP_UNWIND_ON_EXCEPTION to   handle SEH properly
downsides:
+ we lose out on stats on #flushes and #wraps
+ drwrap can't use dr_unlink_flush_region

SVN-Revision: 764

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -750,8 +750,10 @@ set(DynamoRIO_REG_COMPATIBILITY ON)
 configure_DynamoRIO_client(${client_target})
 # i#277/PR 540817: features split into DynamoRIO Extensions
 use_DynamoRIO_extension(${client_target} drcontainers)
+# XXX DRi#684: switch these to static libs for lower overhead
 use_DynamoRIO_extension(${client_target} drmgr)
 use_DynamoRIO_extension(${client_target} drutil)
+use_DynamoRIO_extension(${client_target} drwrap)
 set_target_properties(${client_target} PROPERTIES
   # dlls are put in runtime dir but we want lib dir
   RUNTIME_OUTPUT_DIRECTORY${location_suffix} "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
